# vex

./: LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: release.yml
vex/: __init__.py  config.py  exceptions.py  main.py  make.py  options.py  remove.py  run.py  shell_config.py
vex/functional_tests/: test_basic.py
vex/tests/: __init__.py  fakes.py  tempdir.py  tempvenv.py  tempvexrcfile.py  test_config.py  test_fakes.py  test_main.py  test_run.py  test_shell_config.py  test_vex.py
