[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vex"
dynamic = ["version"]
description = "Run commands in a virtualenv"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["virtualenv", "virtualenvwrapper", "workon", "installation", "deployment"]
authors = [
    { name = "Sasha Hart", email = "s@sashahart.net" },
]
classifiers = [
    "Topic :: Utilities",
    "Topic :: Software Development",
    "Topic :: System :: Shells",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "virtualenv",
]

[project.urls]
Homepage = "http://github.com/sashahart/vex"

[project.scripts]
vex = "vex.main:main"

[tool.hatch.version]
path = "vex/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["vex"]

[tool.hatch.build.targets.sdist]
include = [
    "/vex",
    "/LICENSE",
    "/README.md",
]

[dependency-groups]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "tox",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["vex/tests", "vex/functional_tests"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py312, py313
isolated_build = True

[testenv]
description = run tests
deps =
    pytest
commands =
    pytest {posargs:vex/tests vex/functional_tests}
"""
